--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title></title>
     <style>
         body{
-            background-image: url('./images/slide02.jpg');
+            background-image: url('./images/moon.jpg');
             background-repeat: no-repeat;
             background-size: cover;
         }
